--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Stone Paper Scissors</title>
+    <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="game-cover flex-centered">
-    <h1 class="heading">Stone Paper Scissors</h1>
+    <h1 class="heading">Rock Paper Scissors</h1>
     <img id="logo" src="assets/game-image.png" alt="logo" />
     <img
       class="play"
